@@ -19,6 +19,8 @@
 - (const char *)getValue;
 - linkVariable: (void *)p Type: (int)type;
 - linkVariableInt: (void *)p;
+- linkVariableDouble: (void *)p;
+- linkVariableBoolean: (void *)p;
 - setValue: (const char *)v;
 
 @end
